--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="css/footer.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico'/>
+    <link rel='shortcut icon' type='image/x-icon' href='/dollar.png'/>
   </head>
   <body>
 		<nav class="navbar navbar-default">
@@ -101,7 +101,7 @@
 								<div class="col-xs-6">
 									<div class="well">
 										<div class="form-check">
-											<input class="form-check-input" type="checkbox" value="" id="threshold">
+											<input class="form-check-input" type="checkbox" value="" id="threshold" checked>
 											<label class="form-check-label" for="threshold">
 												Tax Free Threshold
 											</label>
