--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								<div class="form-row">
 										<label for="c2">Financial Year</label>
 										<div class="input-group"> 
-												<input type="number" value="" min="2000" id="FinancialYearInput" disabled />
+												<input type="number" value="" min="2018" max="2020" id="FinancialYearInput" />
 										</div> 
                 </div>
                 </div>
